<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#123456"
    android:orientation="vertical"
    android:gravity="center_horizontal">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="127dp"
        android:layout_marginTop="50dp"
        app:srcCompat="@drawable/logo"
        />
    <EditText

        android:id="@+id/username1"
        android:layout_width="190dp"
        android:layout_height="40dp"
        android:background="#ffffff"

        android:layout_marginTop="160dp"
        android:hint="@string/username" />

    <EditText
        android:id="@+id/password1"
        android:layout_width="190dp"
        android:layout_height="40dp"
        android:background="#ffffff"
        android:layout_marginTop="20dp"
        android:hint="@string/Password" />
    <EditText
        android:id="@+id/confirmpassword"
        android:layout_width="190dp"
        android:layout_height="40dp"
        android:background="#ffffff"
        android:layout_marginTop="20dp"
        android:hint="@string/ConfirmPassword" />
    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:text="@string/Signup" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"

        android:orientation="horizontal">

        <TextView
            android:id="@+id/alreadyregister"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:text="@string/alreadyregister" />

        <TextView
            android:id="@+id/login1"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:paddingLeft="15dp"

            android:text="@string/Login"
            android:textColor="#5F2CBB"
            android:textStyle="bold" />



    </LinearLayout>
</LinearLayout>