<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:gravity="center_horizontal" >
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="127dp"
        app:srcCompat="@drawable/logo"
        android:layout_marginTop="50dp"

   />

    <EditText

        android:id="@+id/username"
        android:layout_width="190dp"
        android:layout_height="40dp"

        android:layout_marginTop="100dp"
        android:hint="@string/username" />

    <EditText
        android:id="@+id/password"
        android:layout_width="190dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:hint="@string/Password" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:text="@string/Login" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"

        android:orientation="horizontal">

        <TextView
            android:id="@+id/notregister"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:text="@string/not_registered" />

        <TextView
            android:id="@+id/register"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:paddingLeft="15dp"

            android:text="@string/register"
            android:textColor="#5F2CBB"
            android:textStyle="bold" />




</LinearLayout>
</LinearLayout>